# quill-cloud-proxy

./: .gitignore  LICENSE  Makefile  NOTICE  README.md
.github/: dependabot.yml
.github/workflows/: check-dns.yml  ci.yml  deploy-enclave-aws.yml  deploy-enclave-gcp.yml  deploy-parent-aws.yml  deploy-parent-pump-aws.yml  deploy.yml  publish-trust-page.yml  reconcile-enclave-dns.yml
docs/: gcp-confidential-space.md  runbook-aws-failover.md  tls-inside-enclave.md
docs/runbooks/: README.md  enclave-deploy-debugging.md  enclave-deploy-monitoring-checklist.md  enclave-state-2026-06-19.md  gcp-enclave-emergency-rollout.md  historical-outage-investigation.md  incident-response.md  provider-onboarding.md
enclave/: Dockerfile.enclave  build-eif.sh  pyproject.toml
enclave-go/: .golangci.yml  Dockerfile.cloudrun.gcp.openrouter  Dockerfile.enclave  Dockerfile.enclave.gcp  Dockerfile.enclave.gcp.anthropic  Dockerfile.enclave.gcp.multi  Dockerfile.enclave.gcp.openrouter  Dockerfile.enclave.openrouter  Dockerfile.parent-pump  go.mod  go.sum
enclave-go/.cache/go-build/: trim.txt
enclave-go/cmd/enclave/: advisor.go  cache_usage_test.go  combo.go  custom_model.go  embeddings.go  error_classifier_aws.go  error_classifier_gcp.go  fusion.go  google_byok_compat_test.go  http_io.go  http_io_test.go  listener_aws.go  listener_gcp.go  main.go  main_test.go  orchestration_usage.go  provider_circuit.go  provider_circuit_test.go  provider_routing_policy.go  provider_stream.go  request_metadata.go  request_metadata_test.go  response_metadata.go  response_metadata_test.go  responses_web_search.go  responses_web_search_output.go  responses_web_search_test.go  settlement.go  settlement_retry.go  socrates.go  sse_batch.go  sse_batch_test.go  subagent.go  system_cache_test.go  tinfoil_cache_scope_test.go
enclave-go/cmd/parent-pump/: main.go  main_test.go
enclave-go/sidecar/: .gitignore  go.mod  go.sum  main.go  peercred_linux.go  peercred_other.go
enclave-python-archived/: pyproject.toml
enclave-python-archived/src/quill_enclave/: __init__.py  _bedrock_real.py  _nsm_mock.py  adapter.py  bedrock.py
enclave-python-archived/tests/: test_adapter.py  test_attest.py  test_auth.py  test_bedrock_mock.py  test_no_io.py
parent/: Dockerfile.parent  pyproject.toml
parent/src/quill_parent/: admin.py  bootstrap_server.py  config.py  heartbeat.py  logging.py  main.py  relay.py  tcp_relay.py  trust.py  usage.py
parent/tests/: test_admin_auth.py  test_bootstrap_server.py  test_gcp_launch_policy.py  test_heartbeat.py  test_no_content_in_logs.py  test_no_parent_inference_routes.py  test_relay_no_inspect.py  test_relay_response_status.py  test_trust_page.py
tools/: Dockerfile.reconciler  deploy-aws-control-plane.sh  deploy-aws-nitro.sh  deploy-gcp-bootstrap.sh  deploy-gcp-mig.sh  ensure-trustedrouter-control-host-cert.sh  fix-quillrouter-dns.sh  fix-trustedrouter-dns.sh  mig-surge-drain.sh  reconcile-enclave-dns.py  release-gcp.sh  revoke-key.py  seal-keys.py  sync-secrets-to-aws.sh  synthetic_gate_status.py  teardown-aws-control-plane.sh  test_synthetic_gate_status.py  test_verify_attestation.py  test_watchdog.py  verify-attestation.py  verify-build.sh  verify-pcr0.sh  wait-canonical-drained.sh  wait-region-attested.sh  wait-region-synthetic-up.sh  watchdog.py  write-trust-artifacts.py
tools/dns/: .gitignore  .terraform.lock.hcl  README.md  main.tf
tools/dx/: enclave-logs.sh
trust-page/: .republish  CNAME  build.sh  gcp-release.json  image-digest-gcp.txt  image-reference-gcp.txt  index.html  pcr0.txt
trust-page/trust/: gcp-release.json  image-digest-gcp.txt  image-reference-gcp.txt
(+1737 files in other folders)
